--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@remix-run/dev": "^1.5.1",
     "@remix-run/eslint-config": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
-    "eslint": "^8.15.0"
+    "eslint": "^8.15.0",
+    "standard": "^17.0.0"
   },
   "engines": {
     "node": ">=14"
