--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "remix dev"
   },
   "dependencies": {
+    "@prisma/client": "3.15.1",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/vercel": "^1.5.1",
@@ -18,6 +19,7 @@
     "@remix-run/eslint-config": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
     "eslint": "^8.15.0",
+    "prisma": "^3.15.1",
     "standard": "^17.0.0"
   },
   "engines": {
